# ProjectBoilerplate

./: .gitignore  CMakeLists.txt  README.md  doxyfile  mainpage.md
.github/workflows/: cmake-multi-platform.yml
include/: BlockingQueue.hpp
src/: BlockingQueue.cpp  CMakeLists.txt  main.cpp
test/: BlockingQueue.cpp  CMakeLists.txt
